[gd_scene load_steps=19 format=3 uid="uid://d3e1mocbpq7hp"]

[ext_resource type="Theme" uid="uid://bkynhi7gd36bl" path="res://themes/menu_btn.tres" id="1_3y1y3"]
[ext_resource type="Script" path="res://scripts/minigames/memory_match/memory_game.gd" id="1_ckjye"]
[ext_resource type="Script" path="res://scripts/minigames/memory_match/memory_game_logic.gd" id="1_y2saq"]
[ext_resource type="Texture2D" uid="uid://cs3dfnulji8oi" path="res://UI stuff/Green Palette/ui_memory.png" id="5_1yvmx"]
[ext_resource type="Theme" uid="uid://kpqilwsnepqa" path="res://themes/nothing.tres" id="5_4atnw"]
[ext_resource type="Script" path="res://scripts/sfx_man.gd" id="5_nj7bn"]
[ext_resource type="Theme" uid="uid://d0m1upkiiwl2s" path="res://themes/menu_btn_dark.tres" id="5_otyuk"]
[ext_resource type="Shader" path="res://shaders/pattern_checker.gdshader" id="5_ymqga"]
[ext_resource type="Texture2D" uid="uid://en8015c4tbgw" path="res://icons/stopwatch.svg" id="6_wjgui"]
[ext_resource type="Texture2D" uid="uid://bedsc86ugpd5r" path="res://icons/question-square.svg" id="7_ujte2"]
[ext_resource type="Texture2D" uid="uid://bju4ckn3irgd0" path="res://UI stuff/Green Palette/ui_green_box.png" id="9_kvcou"]
[ext_resource type="Theme" uid="uid://bsd1dkhc13v47" path="res://themes/plain.tres" id="11_kn5wa"]
[ext_resource type="Texture2D" uid="uid://b8x8pqf7opf1c" path="res://icons/arrow-clockwise.svg" id="12_gljje"]
[ext_resource type="Texture2D" uid="uid://d4t12xgr5bjg" path="res://UI stuff/Green Palette/ui_green_box_inverted.png" id="12_pdrc8"]
[ext_resource type="Texture2D" uid="uid://cobhcf30qgxq2" path="res://icons/list.svg" id="13_nksbq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8bfqs"]
shader = ExtResource("5_ymqga")
shader_parameter/bg_col = Color(0.448346, 0.238343, 0.540524, 1)
shader_parameter/shift_one_right = false
shader_parameter/one_col = Color(0.423065, 0.000124129, 0.423062, 1)
shader_parameter/one_speed = 0.02
shader_parameter/one_size = 10.0
shader_parameter/one_opacity = 0.2
shader_parameter/two_col = Color(0.0208449, 1.92884e-05, 0.101144, 1)
shader_parameter/two_speed = -0.02
shader_parameter/two_size = 10.0
shader_parameter/two_opacity = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_jrwmh"]
line_spacing = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_j03ef"]
font_size = 24

[node name="MemoryGame" type="Node2D"]
script = ExtResource("1_ckjye")

[node name="MemoryGameLogic" type="Node" parent="."]
script = ExtResource("1_y2saq")

[node name="SFX" type="AudioStreamPlayer" parent="MemoryGameLogic"]
unique_name_in_owner = true
bus = &"SFX"
script = ExtResource("5_nj7bn")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UI_Overlay" type="Sprite2D" parent="UI/Control"]
position = Vector2(270, 337.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_1yvmx")

[node name="BG" type="ColorRect" parent="UI/Control"]
material = SubResource("ShaderMaterial_8bfqs")
custom_minimum_size = Vector2(434, 380)
layout_mode = 2
offset_left = 53.0
offset_top = 241.0
offset_right = 487.0
offset_bottom = 622.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.171871, 0.344478, 0.599564, 1)

[node name="TopOverlay" type="CanvasLayer" parent="UI/Control"]
layer = 11

[node name="StartMenu" type="Control" parent="UI/Control/TopOverlay"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 53.0
offset_top = 188.0
offset_right = 487.0
offset_bottom = 622.0

[node name="ColorRect" type="ColorRect" parent="UI/Control/TopOverlay/StartMenu"]
layout_mode = 0
offset_top = 53.0
offset_right = 434.0
offset_bottom = 434.0
color = Color(0.00784314, 0.0156863, 0.0196078, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/TopOverlay/StartMenu"]
layout_mode = 0
offset_top = 53.0
offset_right = 434.0
offset_bottom = 434.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/TopOverlay/StartMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TimedStartBtn" type="Button" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_otyuk")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/TimedStartBtn"]
layout_mode = 0
offset_top = 20.0
offset_right = 161.0
offset_bottom = 242.0
theme = ExtResource("5_4atnw")
alignment = 1

[node name="timedTitle" type="Label" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/TimedStartBtn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "Play Timed"
horizontal_alignment = 1

[node name="Button" type="Button" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/TimedStartBtn/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
icon = ExtResource("6_wjgui")
flat = true
icon_alignment = 1
expand_icon = true

[node name="bestTime" type="Label" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/TimedStartBtn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 1
text = "Best time
%s secs"
horizontal_alignment = 1

[node name="NormalStartBtn" type="Button" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_otyuk")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/NormalStartBtn"]
layout_mode = 0
offset_top = 20.0
offset_right = 162.0
offset_bottom = 242.0
theme = ExtResource("5_4atnw")

[node name="normalTitle" type="Label" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/NormalStartBtn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "Play Normal"
horizontal_alignment = 1

[node name="Button" type="Button" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/NormalStartBtn/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
icon = ExtResource("7_ujte2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="bestGuesses" type="Label" parent="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/NormalStartBtn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 1
text = "Lowest Guesses
%s"
horizontal_alignment = 1

[node name="FinishMenu" type="Control" parent="UI/Control/TopOverlay"]
layout_mode = 3
anchors_preset = 0
offset_left = 53.0
offset_top = 188.0
offset_right = 53.0
offset_bottom = 188.0

[node name="ColorRect" type="ColorRect" parent="UI/Control/TopOverlay/FinishMenu"]
offset_top = 53.0
offset_right = 434.0
offset_bottom = 434.0
color = Color(0.00784314, 0.0156863, 0.0196078, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/TopOverlay/FinishMenu"]
offset_top = 53.0
offset_right = 434.0
offset_bottom = 434.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("11_kn5wa")
theme_override_font_sizes/font_size = 20
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalIcon" type="Button" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_4atnw")
icon = ExtResource("7_ujte2")
icon_alignment = 1
expand_icon = true

[node name="FinalScore" type="Label" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_otyuk")
text = "Time:
2.00 seconds"
label_settings = SubResource("LabelSettings_jrwmh")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 80

[node name="Button" type="Button" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_3y1y3")
text = "Retry"
icon = ExtResource("12_gljje")
expand_icon = true

[node name="Button2" type="Button" parent="UI/Control/TopOverlay/FinishMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_3y1y3")
text = "Menu"
icon = ExtResource("13_nksbq")
expand_icon = true

[node name="HelpMenu" type="Control" parent="UI/Control/TopOverlay"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Control/TopOverlay/HelpMenu"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1350.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_kvcou")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="UI/Control/TopOverlay/HelpMenu"]
layout_mode = 0
offset_left = 330.0
offset_top = 200.0
offset_right = 443.0
offset_bottom = 228.0
theme = ExtResource("1_3y1y3")
text = "HELP"
label_settings = SubResource("LabelSettings_j03ef")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CloseBtn" type="Button" parent="UI/Control/TopOverlay"]
offset_left = 500.0
offset_top = 20.0
offset_right = 516.0
offset_bottom = 41.0
theme = ExtResource("1_3y1y3")
text = "X"

[node name="HelpBtn" type="Button" parent="UI/Control/TopOverlay"]
offset_left = 20.0
offset_top = 20.0
offset_right = 36.0
offset_bottom = 41.0
theme = ExtResource("1_3y1y3")
text = "?"

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
layout_mode = 2
offset_left = 53.0
offset_top = 241.0
offset_right = 487.0
offset_bottom = 622.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="CardGrid" type="GridContainer" parent="UI/Control/MarginContainer"]
layout_direction = 2
layout_mode = 2
columns = 5

[node name="ScoreContainer" type="NinePatchRect" parent="UI/Control"]
layout_mode = 0
offset_left = 45.0
offset_top = 87.0
offset_right = 483.0
offset_bottom = 301.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("11_kn5wa")
texture = ExtResource("12_pdrc8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="UI/Control/ScoreContainer"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 422.0
offset_bottom = 198.0
color = Color(0, 0, 0, 0.313726)

[node name="ScoreLabel" type="Label" parent="UI/Control/ScoreContainer"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 422.0
offset_bottom = 198.0
theme = ExtResource("5_4atnw")
theme_override_font_sizes/font_size = 40
text = "-

-"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/TimedStartBtn" to="." method="_on_timed_start_btn_button_down"]
[connection signal="button_down" from="UI/Control/TopOverlay/StartMenu/MarginContainer/HBoxContainer/NormalStartBtn" to="." method="_on_normal_start_btn_button_down"]
[connection signal="button_down" from="UI/Control/TopOverlay/CloseBtn" to="." method="_on_close_btn_button_down"]
[connection signal="button_down" from="UI/Control/TopOverlay/HelpBtn" to="." method="_on_help_btn_button_down"]
